# Boxel

./: .gitignore  CMakeLists.txt  LICENSE
engine/: CMakeLists.txt
engine/src/: defines.h  engine.c  engine.h  engine_private.c  engine_private.h  logger.c  logger.h  main.c  resource_system.c  resource_system.h
engine/src/core/: allocators.c  allocators.h  event.c  event.h  job_system.c  job_system.h  logger.c  logger.h  math_types.h  memory.c  memory.h
engine/src/platform/: filesystem.c  filesystem.h  platform.h  platform_glfw.c  platform_linux.c  platform_posix.c  platform_windows.c  threading.c  threading.h  tinycthread.c  tinycthread.h
engine/src/renderer/: render_backend.c  render_cmd.c  render_layout.c  render_layout.h  render_objects.c  render_objects.h  renderer_backend.c  renderer_backend.h  renderer_cmd.c  renderer_cmd.h  renderer_types.c  renderer_types.h  vertex_layout.c  vertex_layout.h
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_fence.h  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_renderbuffer.c  vulkan_renderbuffer.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_renderstage.c  vulkan_renderstage.h  vulkan_rendertarget.c  vulkan_rendertarget.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_texture.c  vulkan_texture.h  vulkan_types.h  vulkan_types.inl  vulkan_utils.c  vulkan_utils.h  vulkan_window_system.c  vulkan_window_system.h
engine/src/renderer/vulkan/platform/: vulkan_platform.h
engine/src/utils/: darray.c  darray.h  event.c  event.h  freelist.c  freelist.h  math_types.h  string_utils.c  string_utils.h
engine/src/voxel/: octree_gen.c  octree_gen.h  voxel_loader.c  voxel_loader.h
sandbox/: CMakeLists.txt
sandbox/assets/: cars.vox  shader_base.frag  shader_base.vert  test_compute.comp
sandbox/src/: main.c  voxel_model.c  voxel_model.h
